# opensubs-rs

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  domain.rs  error.rs  lib.rs  parser.rs  parser_tests.rs  search.rs  search_tests.rs  strip.rs  strip_tests.rs  test_utils.rs  types.rs
tests/: episode-page.html  multi-search-results.html  series-search-results.html
