[package]
name = "opensubs-rs"
version = "0.1.0"
authors = ["Eugene Lebedev <duke.tougu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.19"
scraper = "0.12.0"

tokio = { version = "0.2", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1"
reqwest = { version = "0.10.6", features = ["json", "cookies"] }

log = "0.4.8"
log4rs = "0.10.0"