[package]
name = "opensubs-rs"
version = "0.3.0"
authors = ["Eugene Lebedev <duke.tougu@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0.19"
scraper = "0.12.0"

tokio = { version = "0.2", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1"
reqwest = { version = "0.10.6", features = ["json", "cookies"] }

percent-encoding = "2.1.0"
encoding = "0.2.33"

log = "0.4.8"
log4rs = "0.10.0"
