[package]
name = "opensubs-rs"
version = "0.4.1"
authors = ["Eugene Lebedev <duke.tougu@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0"
scraper = "0.12.0"

tokio = { version = "1", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
regex = "1"
reqwest = { version = "0.11", features = ["json", "cookies"] }

percent-encoding = "2.1"
encoding = "0.2"

log = "0.4"
log4rs = "1"
